--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@grapecity/spread-excelio": "^14.2.2",
+    "@grapecity/spread-sheets": "^14.2.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.2.0",
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
+    "filereader": "^0.10.3",
+    "mock-browser": "^0.92.14",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
